Fix margin value
Because margin applied to all side instead of border-bottom only.
Assign color is not align to other element, makes looks imperfect.

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -13,18 +13,20 @@ body {
 .title {
   background: #e3f4ff;
   padding: 10px;
-  margin: 5px;
+  margin-bottom: 5px;
+  font-size: 12px;
 }
 
 .content {
   background: #e3f4ff;
   padding: 10px;
-  margin: 5px;
+  margin-bottom: 5px;
 }
 
 .button-container {
   background: #e3f4ff;
   padding: 10px;
+  text-align: center;
 }
 
 button {
@@ -32,4 +34,6 @@ button {
   border: 1px solid #eee;
   padding: 10px;
   display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
